--- a/Attempt6/.env
+++ b/Attempt6/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://jacobjennings7991:jacobjennings7991@cluster0.nhrmzof.mongodb.net/
+MONGODB_URI = mongodb+srv://jacobjennings7991:
